--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,8 @@ img {
 .link:active {
   background-color: #d7373b;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .container {
@@ -101,9 +102,15 @@ img {
 }
 
 .main-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-top: 49px;
   font-size: 16px;
   font-weight: 500;
@@ -111,10 +118,17 @@ img {
 }
 
 .menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0;
   margin-left: 201px;
   padding: 0;
@@ -124,8 +138,12 @@ img {
 }
 
 .main-navigation div.menu-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main-navigation a {
@@ -146,9 +164,15 @@ img {
 }
 
 .menu-item .basket {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .menu-link-catalog {
@@ -157,10 +181,17 @@ img {
 }
 
 .basket-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0;
   margin-left: auto;
   padding: 0;
@@ -194,7 +225,9 @@ img {
   height: 18px;
   text-align: center;
   font-size: 0;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .slider-controls label {
@@ -316,7 +349,8 @@ img {
 .button:active {
   background-color: #d7373b;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .features {
@@ -324,9 +358,14 @@ img {
 }
 
 .features-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   margin-bottom: 81px;
   padding: 0;
@@ -395,7 +434,8 @@ img {
 .link-red:active {
   background-color: #d7373b;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .link-green {
@@ -410,7 +450,8 @@ img {
 .link-green:active {
   background-color: #00aa62;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .link-yellow {
@@ -425,12 +466,17 @@ img {
 .link-yellow:active {
   background-color: #e5a722;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: relative;
   border-bottom: 2px solid #eeeeee;
 }
@@ -442,7 +488,8 @@ img {
 
 .description-list .cry {
   display: block;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 33px;
   font-size: 45px;
   line-height: 45px;
@@ -450,7 +497,8 @@ img {
 }
 
 .description-list p {
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 39px;
   font-size: 16px;
   line-height: 24px;
@@ -503,8 +551,13 @@ img {
 }
 
 .offers-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -521,8 +574,12 @@ img {
 }
 
 .offers-list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 24px;
 }
 
@@ -537,7 +594,8 @@ img {
 }
 
 .table-item {
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-right: 19px;
   text-align: left;
 }
@@ -548,6 +606,8 @@ img {
 }
 
 .percentages {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-bottom: 12px;
   font-size: 45px;
@@ -563,9 +623,14 @@ img {
 }
 
 .logo-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 0;
   background-position: center;
@@ -573,6 +638,8 @@ img {
 }
 
 .logo-link-one {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: auto;
   width: 199px;
@@ -581,14 +648,20 @@ img {
 }
 
 .logo-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 260px;
   height: 180px;
   vertical-align: middle;
 }
 
 .logo-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0;
   opacity: 0.2;
@@ -616,11 +689,14 @@ img {
 
 .logo-item::after {
   content: "";
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   width: 50px;
   height: 2px;
   background-color: #eeeeee;
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .logo-item:last-child::after {
@@ -682,13 +758,18 @@ iframe {
 }
 
 .container-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .exhortation {
   margin-top: 6px;
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 b.benefit {
@@ -711,8 +792,12 @@ b.benefit {
 }
 
 .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 260px;
   margin: 0;
   margin-right: 139px;
@@ -760,20 +845,31 @@ b.benefit {
 .social:active {
   fill: #e37376;
   background-color: #d7373b;
-  box-shadow: inset 0 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 3px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 3px rgba(0, 0, 0, 0.1);
 }
 
 .container-cataloge {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 59px;
   padding-bottom: 57px;
 }
 
 .container-item-sorting {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   margin-bottom: 39px;
 }
 
@@ -854,7 +950,8 @@ h1.caption {
   padding: 0;
   border: 8px solid #ffffff;
   background-color: #ababab;
-  box-shadow: 0 2px 1px 0 #cfcfcf;
+  -webkit-box-shadow: 0 2px 1px 0 #cfcfcf;
+          box-shadow: 0 2px 1px 0 #cfcfcf;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -912,6 +1009,8 @@ h1.caption {
 }
 
 .grid-item label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   cursor: pointer;
 }
@@ -947,6 +1046,8 @@ h1.caption {
 }
 
 .capabilities-item label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   cursor: pointer;
 }
@@ -1032,7 +1133,8 @@ h1.caption {
 .link-show:active {
   color: #a9a9a9;
   background-color: #d5d5d5;
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .container-item-sorting p {
@@ -1044,8 +1146,12 @@ h1.caption {
 }
 
 .sorting {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 360px;
   margin: 0;
   margin-bottom: 16px;
@@ -1114,9 +1220,14 @@ h1.caption {
 }
 
 .services {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   margin-bottom: 27px;
   padding: 0;
@@ -1154,7 +1265,8 @@ h1.caption {
 
 .services-item:hover {
   display: block;
-  box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 .points {
@@ -1214,8 +1326,12 @@ h1.caption {
 }
 
 .pages-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
   font: inherit;
@@ -1234,7 +1350,8 @@ h1.caption {
   color: #000000;
   border-radius: 2px;
   background-color: #eeeeee;
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 .pages-list .pages-next {
@@ -1259,7 +1376,8 @@ h1.caption {
 .pages-list a[href]:active {
   color: #a9a9a9;
   background-color: #d5d5d5;
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .modal-window {
@@ -1267,7 +1385,8 @@ h1.caption {
   z-index: 104;
   position: fixed;
   background-color: #ffffff;
-  box-shadow: 0 10px 30px 10px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 10px 30px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 10px 30px 10px rgba(0, 0, 0, 0.5);
 }
 
 .modal-window-login {
@@ -1276,7 +1395,9 @@ h1.caption {
   width: 760px;
   padding: 70px 100px 80px;
   z-index: 9999;
-  transform: translate(-480px, -300px);
+  -webkit-transform: translate(-480px, -300px);
+      -ms-transform: translate(-480px, -300px);
+          transform: translate(-480px, -300px);
 }
 
 .modal-close {
@@ -1311,20 +1432,34 @@ h1.caption {
 }
 
 .login {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 30px;
 }
 
 .login-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 47%;
 }
 
 .login-email {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 47%;
 }
 
@@ -1343,15 +1478,23 @@ h1.caption {
 }
 
 .login-textarea {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
   margin-bottom: 45px;
 }
 
 .login-textarea textarea {
-  flex-wrap: wrap;
-  flex-grow: 1;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 13px;
   border: 2px solid #d7dcde;
   resize: none;
@@ -1383,40 +1526,70 @@ h1.caption {
 }
 
 .modal-error {
-  animation: shake 0.6s;
-  animation: bounce 0.6s;
+  -webkit-animation: shake 0.6s;
+          animation: shake 0.6s;
+  -webkit-animation: bounce 0.6s;
+          animation: bounce 0.6s;
 }
 
 .iframe-list {
   position: absolute;
   top: 0;
   left: 0;
+  border: 0;
   width: 100%;
   height: 415px;
 }
 
-@keyframes bounce {
+@-webkit-keyframes bounce {
   0% {
-    transform: translateY(-2000px);
+    -webkit-transform: translateY(-2000px);
+            transform: translateY(-2000px);
   }
 
   70% {
-    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
   }
 
   90% {
-    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
   }
 
   100% {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
-@keyframes shake {
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateY(-2000px);
+            transform: translateY(-2000px);
+  }
+
+  70% {
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+  }
+
+  90% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes shake {
   0%,
   100% {
-    transform: translateX();
+    -webkit-transform: translateX();
+            transform: translateX();
   }
 
   10%,
@@ -1424,13 +1597,40 @@ h1.caption {
   50%,
   70%,
   90% {
-    transform: translateX(-10px);
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
   }
 
   20%,
   40%,
   60%,
   80% {
-    transform: translateX(10px);
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    -webkit-transform: translateX();
+            transform: translateX();
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
   }
 }
